v11/fixtures/ast/errors/method_scope_missing_import/source.able
import pkgmethods

inst := pkgmethods.Widget.make(3)
inst.bump(1)
